# tnwdlqw

./: .env.example  .gitignore  predict.py  pyproject.toml  requirements.txt  setup_and_train.sh  train.py
configs/: settings.py
docs/: 01_system_architecture.md  02_database_design.md  03_data_contracts.md  04_feature_engineering.md  05_modeling_design.md  06_monte_carlo_engine.md  07_training_evaluation_research.md  08_implementation_plan.md
src/ensemble/: __init__.py  ensemble_model.py
src/evaluation/: metrics.py  walk_forward.py
src/feature_engineering/: builder.py  expected_goals.py  ratings.py  team_form.py
src/ingestion/: data_merger.py  international_results_ingestor.py  statsbomb_ingestor.py
src/models/: base_model.py  gbdt_models.py  poisson_model.py
src/utils/: constants.py  logger.py
